gaps between the burger-menu list and screen edges fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -443,7 +443,7 @@ main {
                     flex-direction: column-reverse;
                     .works__card-img {
                         margin-left: 15%;
-                        max-width: 100%;
+                        max-width: 85%;
                     }
                     .works__card-text {
                         text-align: center;
